--- a/resources/assets/sass/components/_banner.scss
+++ b/resources/assets/sass/components/_banner.scss
@@ -31,7 +31,7 @@
 
 .thumbnail {
     img {
-        height: 48vh;
+        max-height: 35vh;
         object-fit: cover;
         width: 100%;
     }
