--- a/resources/assets/sass/components/_grid.scss
+++ b/resources/assets/sass/components/_grid.scss
@@ -1,34 +1,54 @@
+//COLUMNS COM PADDING
 .columns {
     &.has-padding-30 {
         .column {
-            padding: 30px;
-        }
-    }
-    &.has-lateral-padding-30 {
-        >.column:not(:first-child) {
-            padding-left: 30px;
-        }
-        >.column:not(:last-child) {
-            padding-right: 30px;
-        }
-    }
-    &.has-lateral-padding-45 {
-        >.column:not(:first-child) {
-            padding-left: 45px;
-        }
-        >.column:not(:last-child) {
-            padding-right: 45px;
+            padding-top: 30px;
+            padding-bottom: 30px;
         }
     }
 }
-
+//PADINGS LATERAIS NÃO SÃO APLICADOM EM TELAS < 768px
+@media only screen and (min-width: 768px) {
+    .columns {
+        &.has-padding-30 {
+            .column {
+                padding-left: 30px;
+                padding-right: 30px;
+            }
+        }
+        &.has-lateral-padding-30 {
+            >.column:not(:first-child) {
+                padding-left: 30px;
+            }
+            >.column:not(:last-child) {
+                padding-right: 30px;
+            }
+        }
+        &.has-lateral-padding-45 {
+            >.column:not(:first-child) {
+                padding-left: 45px;
+            }
+            >.column:not(:last-child) {
+                padding-right: 45px;
+            }
+        }
+    }
+}
+//MARGIN NO CONTAINER EM DISPOSITIVOS MÓVEIS
+@media only screen and (max-width: 1088px) {
+    .container {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+//AJUSTAR TAMANHO DO CONTAINER EM ALGUNS TAMANHOS
 @media only screen and (min-width: 1088px) {
     .container {
-        max-width: 1000px !important;
+        max-width: 1000px;
     }
 }
 @media only screen and (min-width: 1600px) {
     .container {
-        max-width: 1152px !important;
+        max-width: 1152px;
     }
 }
