--- a/resources/assets/sass/extensions/_divider.sass
+++ b/resources/assets/sass/extensions/_divider.sass
@@ -11,6 +11,7 @@ $divider-color: $primary !default
   margin: 2rem 0
   text-align: center
 
+//Titulo
 .is-divider[data-content]::after, .is-divider-vertical[data-content]::after
   background: $white
   color: $divider-color
