--- a/resources/assets/sass/extensions/_quickview.sass
+++ b/resources/assets/sass/extensions/_quickview.sass
@@ -80,6 +80,8 @@ $quickview-divider: 1px solid $grey-lighter !default
   padding: .8rem 2rem .8rem .8rem
   line-height: 1.8rem
   text-align: justify
+  a
+    word-wrap: break-word
 
 .quickview-footer
   display: flex
