--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -35,12 +35,15 @@ span.info {
     text-align: center;
 }
 
-.title {
-    display: block;
+// VISUALIZAÇÃO DAS NOTÍCIAS
+.post-title {
+	display: block;
     text-align: center;
-    line-height: 1.8em;
+	line-height: 1.8em;
+	color: $primary;
+    font-size: 2rem;
+    font-weight: 600;
 }
-
 .post-meta {
     margin: 20px 0;
     display: block;
@@ -51,21 +54,26 @@ span.info {
         margin: 0 15px;
     }
 }
+.post-body {
+	h1 { font-size: 2em; }
+	h2 { font-size: 1.5em; }
+	h3 { font-size: 1.17em; }
+	h4 { font-size: 1.12em; }
+	h5 { font-size: .83em; }
+	h6 { font-size: .75em; }
+}
+// CARDS DA BIBLIOTECA
 .work {
 	position: relative;
-	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-            0 3px 1px -2px rgba(0,0,0,0.12),
-			0 1px 5px 0 rgba(0,0,0,0.2);
-	padding: 10px;
-	border-radius: 20px;
-	background: rgb(553, 553, 553);
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.08),
+            0 3px 1px -2px rgba(0,0,0,0.06),
+			0 1px 5px 0 rgba(0,0,0,0.09);
+	border: 1px solid $muted;
+	padding: 10px 20px;
     .work-title {
         font-weight: bold;
         letter-spacing: 1px;
 		color: $primary;
-		&:hover {
-			text-decoration: underline;
-		}
 	}
 	.meta {
 		display: flex;
@@ -82,4 +90,27 @@ span.info {
 		}
 	}
     
+}
+.video-frame {
+    width: 100%;
+	position: relative;
+	padding-bottom: 56.25%; //16:9
+	iframe {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+        0 3px 1px -2px rgba(0,0,0,0.12),
+		0 1px 5px 0 rgba(0,0,0,0.2);
+		transform: scale(1.01);
+		background: rgba(255, 255, 255, 0);
+	}
+}
+
+.video-list {
+	height: 100%;
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	text-align: center;
 }
