--- a/resources/assets/sass/components/_banner.scss
+++ b/resources/assets/sass/components/_banner.scss
@@ -22,17 +22,11 @@
 }
 
 .thumbnail-preview {
-    max-height: 35vh;
     object-fit: cover;
     width: 100%;
-    object-position: 50% 50%;
-    min-height: 230px;
-}
-
-.thumbnail {
-    img {
-        max-height: 35vh;
-        object-fit: cover;
-        width: 100%;
-    }
+	height: 40vh;
+	border: 1px solid $muted;
+	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+        0 3px 1px -2px rgba(0,0,0,0.12),
+        0 1px 5px 0 rgba(0,0,0,0.2);
 }
