--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -7,5 +7,29 @@
         .modal-content.is-large {
             width: 90%;
         }
-    }
+	}
+	&.is-active {
+		animation: modal-enter-active 100ms ease-in-out ;
+		.card {
+			animation: card-enter-active 150ms ease-in-out;
+		}
+	}
+}
+@keyframes modal-enter-active {
+	0%{
+		opacity: 0;
+	}
+	100%{
+		opacity: 1;
+	}
+}
+@keyframes card-enter-active {
+	0%{
+		opacity: 0;
+		transform: scale(0.001);
+	}
+	100%{
+		opacity: 1;
+		transform: none;
+	}
 }
