--- a/resources/assets/sass/extensions/_quickview.sass
+++ b/resources/assets/sass/extensions/_quickview.sass
@@ -67,7 +67,7 @@ $quickview-divider: 1px solid $grey-lighter !default
       .title
         color: $color-invert
   .title
-    font-size: $size-6
+    font-size: 1.5em
     font-weight: $weight-light
     margin-bottom: 0
     img
@@ -85,23 +85,17 @@ $quickview-divider: 1px solid $grey-lighter !default
 
 .quickview-footer
   display: flex
-  justify-content: space-evenly
+  justify-content: center
   align-items: center
   padding: 0 1rem
   min-height: $quickview-footer-height
   background-color: $white-ter
   border-top: $quickview-divider
   margin-top: 0
+  color: $primary
   > *
     margin: 0 .4rem
   i
-    font-size: 2rem
-  .fa-lattes
-    transform: rotateZ(-60deg) rotateY(30deg)
-    color: #3C3E73 !important
-  .fa-facebook
-      color: #4267B2
+    font-size: 1.4rem
   .fa-envelope
       color: #FFD460
-  .fa-linkedin
-      color: #0077B5
