--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -69,27 +69,39 @@ span.info {
             0 3px 1px -2px rgba(0,0,0,0.06),
 			0 1px 5px 0 rgba(0,0,0,0.09);
 	border: 1px solid $muted;
-	padding: 10px 20px;
+	padding: 10px 0 0 0;
+	cursor: pointer;
+	&.is-animated {
+		transition: 180ms;
+		&:hover {
+			transition: 100ms;
+			transform: rotate(2deg);
+		}
+	}
     .work-title {
         font-weight: bold;
         letter-spacing: 1px;
 		color: $primary;
+		padding: 0 20px;
 	}
 	.meta {
 		display: flex;
-  		justify-content: space-evenly;
+  		justify-content: space-between;
 		color: $muted;
-		font-style: italic;
-		margin-top: .2rem;
-		font-size: .85rem;
-		a {
-			color: $inverse;
-			&:hover {
-				text-decoration: underline;
-			}
+		margin: 1rem 0 0 0;
+		.tag:first-of-type {
+			background: $inverse;
+			color: $primary;
+		}
+		.tag {
+			background: $primary;
+			color: $white;
+			border-radius: 0;
 		}
 	}
-    
+	.preview {
+		padding: 0 1em;
+	}
 }
 .video-frame {
     width: 100%;
