Estrutura de Events alterada / View events do site criada / Maps implementadso

--- a/resources/assets/sass/components/_table.scss
+++ b/resources/assets/sass/components/_table.scss
@@ -1,6 +1,6 @@
 table.table {
     border: 1px solid #EBEBEB;
-    .is-location {
+    .is-address {
         padding-left: 32px;
         i {
             color: #DD4B3E;
