--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14599,13 +14599,13 @@ span.info {
   padding: 0 1em;
 }
 
-.video-frame {
+.iframe-container {
   width: 100%;
   position: relative;
   padding-bottom: 56.25%;
 }
 
-.video-frame iframe {
+.iframe-container iframe {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -14613,7 +14613,6 @@ span.info {
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   -webkit-transform: scale(1.01);
           transform: scale(1.01);
-  background: rgba(255, 255, 255, 0);
 }
 
 .video-list {
@@ -15178,11 +15177,11 @@ table.table {
   border: 1px solid #EBEBEB;
 }
 
-table.table .is-location {
+table.table .is-address {
   padding-left: 32px;
 }
 
-table.table .is-location i {
+table.table .is-address i {
   color: #DD4B3E;
 }
 
