--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -103,7 +103,7 @@ span.info {
 		padding: 0 1em;
 	}
 }
-.video-frame {
+.iframe-container {
     width: 100%;
 	position: relative;
 	padding-bottom: 56.25%; //16:9
@@ -115,7 +115,6 @@ span.info {
         0 3px 1px -2px rgba(0,0,0,0.12),
 		0 1px 5px 0 rgba(0,0,0,0.2);
 		transform: scale(1.01);
-		background: rgba(255, 255, 255, 0);
 	}
 }
 
